network-invite: fix styling/spacing of title/description

--- a/app/client/stylesheets/components/compositions/pu-composition-network-invite.sass
+++ b/app/client/stylesheets/components/compositions/pu-composition-network-invite.sass
@@ -1,3 +1,7 @@
 .pu-composition-network-invite
+    .pu-title-modal,
+    .pu-description-modal
+        margin-bottom: 20px
+
     .pu-filterbar > .pu-sub-input
         width: 140px
